Finished writing the tests cases for the signup page and not-found / 404 page with 100% coverage. Jest mocking of my own named ES6 exports with the mockImplementation function now seems to be working even though nothing changed regarding the code or the env

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 			"!<rootDir>/src/seed.js",
 			"!<rootDir>/src/helpers/*.js",
 			"!<rootDir>/src/hooks/*.js",
-			"!<rootDir>/src/services/firebase/*.js"
+			"!<rootDir>/src/services/firebase.js"
 		],
 		"coverageThreshold": {
 			"global": {
