Install cypress and installed all necessary deps on my wsl 2 terminal. Successfully connected the Cypress GUI to wsl to be able to run it from WSL. Some errors do propagate which may have to do with some of othe network requests failing. Wrote end to end testing for the login , profile and dashboard page. The dashboard gets a lot of pending XHR requests that don't finish in firebase I may have to come back to that. Will start work on the comment box, double tap to like and search bar in that order

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test --coverage --watchAll",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"e2e": "cypress open"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -67,6 +68,7 @@
 	"devDependencies": {
 		"@tailwindcss/postcss7-compat": "^2.0.3",
 		"autoprefixer": "^9.8.6",
+		"cypress": "^6.8.0",
 		"postcss": "^7.0.35",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
 	}
