--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^12.1.10",
 		"date-fns": "^2.17.0",
 		"firebase": "^8.2.9",
+		"lodash": "^4.17.21",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
