Added new page / protected route for logged in users to create a new post. Has a custom styled file input that looks like a button with the same accessbility features. Have the final design for the page done with all widths accounted for. Added in a loading skelton for the content if the username has not yet been parsed. Need to add logic to connect this with the S3 upload express server and logic to display a preview of the image somewhere on the page when it is rendered

--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,16 @@
   "description": "Backend to handle secure file uploads for the instagram app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.883.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
